# legal-copilot

backend/: .gitignore  example.env  pyproject.toml
backend/configs/: settings.py
backend/database/: vectorstore.py
backend/ingestion/external_data/: chunking.py  embedding.py  pdf_extraction.ipynb  pdf_to_markdown.py  tokenizer.py
backend/ingestion/internal_data/: embedding.py
backend/schemas/: __init__.py  vectorstore_search_schemas.py
backend/schemas/ingestion/: external_data_schemas.py
data/: 2025_Landlord_Tenant_Guide.md  chunk_summaries.json  chunks.json  data.json  internal_data.json
docs/: client_brief.md  retrieval_agent.md
