[project]
name = "backend-legal-copilot"
version = "0.1.0"
description = "This is the backend for Legal Copilot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.139.0",
    "langfuse>=2.0.0,<3.0.0",
    "openai>=2.45.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.1",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "docling>=2.112.0",
    "ipykernel>=7.3.0",
    "pandas>=3.0.3",
    "tiktoken>=0.13.0",
]
